<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              tools:context="ch.heigvd.iict.daa.labo4.ui.view.ControlsFragment">
    <TextView
            android:id="@+id/controls_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controls_counter_default"
            android:textSize="@dimen/touchable_item_height"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:layout_margin="@dimen/general_margin"
    />
    <Button
            android:id="@+id/controls_action_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_generate"
            android:layout_margin="@dimen/general_margin"
    />
    <Button
            android:id="@+id/controls_action_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delete"
            android:layout_margin="@dimen/general_margin"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controls_action_text"
            android:textSize="@dimen/touchable_item_height"
            android:layout_margin="@dimen/general_margin"
    />
</LinearLayout>
